--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -100,8 +100,8 @@
                      forcePluginActivation="true"
                      property="org.eclipse.core.resources.extension"
                      value="properties"/>
-                  </and>
-                  <instanceof value="uk.ac.diamond.sda.navigator.properties.PropertiesTreeData"/>
+               </and>
+               <!--instanceof value="uk.ac.diamond.sda.navigator.properties.PropertiesTreeData"/-->
             </or>
          </triggerPoints>
          <possibleChildren>
@@ -134,13 +134,24 @@
                      property="org.eclipse.core.resources.extension"
                      value="h5"/>
                </and>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.Tree"/>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode"/>
+               <and>
+                  <instanceof value="org.eclipse.core.resources.IResource"/>
+                  <test
+                     forcePluginActivation="true"
+                     property="org.eclipse.core.resources.extension"
+                     value="hdf5"/>
+               </and>
+               <and>
+                  <instanceof value="org.eclipse.core.resources.IResource"/>
+                  <test
+                     forcePluginActivation="true"
+                     property="org.eclipse.core.resources.extension"
+                     value="nxs"/>
+               </and>
             </or>
          </triggerPoints>
          <possibleChildren>
             <or>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.Tree"/>
                <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode"/>
             </or>
          </possibleChildren>
@@ -150,7 +161,7 @@
       </navigatorContent>
    </extension>
    <!-- Declare a content extension that renders the contents of a .nxs file -->
-   <extension
+   <!--extension
          point="org.eclipse.ui.navigator.navigatorContent">
       <navigatorContent 
          id="uk.ac.diamond.sda.navigator.nexusContent"
@@ -169,13 +180,10 @@
                      property="org.eclipse.core.resources.extension"
                      value="nxs"/>
                </and>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.Tree"/>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode"/>
             </or>
          </triggerPoints>
          <possibleChildren>
             <or>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.Tree"/>
                <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode"/>
             </or>
          </possibleChildren>
@@ -183,7 +191,7 @@
                class="uk.ac.diamond.sda.navigator.actions.HDF5ActionProvider"
                id="uk.ac.diamond.sda.navigator.actions.HDF5OpenProvider"/>
       </navigatorContent>
-   </extension>
+   </extension-->
    <!-- Declare a content extension that renders the contents of a .dat file -->
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">
@@ -204,7 +212,7 @@
                      property="org.eclipse.core.resources.extension"
                      value="dat"/>
                </and>
-               <instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.srs.SRSTreeData"/>
+               <!--instanceof value="uk.ac.diamond.scisoft.analysis.rcp.navigator.srs.SRSTreeData"/-->
             </or>
          </triggerPoints>
          <possibleChildren>
@@ -224,7 +232,7 @@
          <includes>
             <contentExtension pattern="uk.ac.diamond.sda.navigator.propertiesContent"/>
             <contentExtension pattern="uk.ac.diamond.sda.navigator.hdf5Content"/>
-            <contentExtension pattern="uk.ac.diamond.sda.navigator.nexusContent"/>
+            <!--contentExtension pattern="uk.ac.diamond.sda.navigator.nexusContent"/-->
             <contentExtension pattern="uk.ac.diamond.sda.navigator.srsContent"/>
             <contentExtension pattern="org.eclipse.ui.navigator.resourceContent"/>
          </includes>
@@ -257,9 +265,9 @@
             <contentExtension
                   pattern="uk.ac.diamond.sda.navigator.propertiesContent">
             </contentExtension>
-            <contentExtension
+            <!--contentExtension
                   pattern="uk.ac.diamond.sda.navigator.nexusContent">
-            </contentExtension>
+            </contentExtension-->
             <contentExtension
                   pattern="uk.ac.diamond.sda.navigator.hdf5Content">
             </contentExtension>
@@ -286,6 +294,34 @@
             <description>
                Displays the file size and the date of last modification.
             </description>
+      </decorator>
+      <decorator
+            adaptable="true"
+            class="uk.ac.diamond.sda.navigator.srs.SRSLabelProvider"
+            id="uk.ac.diamond.sda.navigator.srsDecorator"
+            label="SRS element"
+            state="true">
+         <enablement>
+            <objectClass
+                  name="uk.ac.diamond.scisoft.analysis.rcp.navigator.srs.SRSTreeData">
+            </objectClass></enablement>
+         <description>
+            Displays the SRS tree elements caracteristics.
+         </description>
+      </decorator>
+      <decorator
+            adaptable="true"
+            class="uk.ac.diamond.sda.navigator.hdf5.HDF5LabelProvider"
+            id="uk.ac.diamond.sda.navigator.hdf5Decorator"
+            label="HDF5 element"
+            state="true">
+         <enablement>
+            <objectClass
+                  name="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode">
+            </objectClass></enablement>
+         <description>
+            Displays the HDF5 tree elements caracteristics.
+         </description>
       </decorator>
    </extension>
    <!-- Bind the Action Provider independently 
