SDA - Plot printing: addition of a preview window which enables the user to: *print directly what is seen on the preview *choose a printer and print the plotting *scale the plot and see the result on the print preview window

--- a/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
@@ -32,6 +32,9 @@ PRINT_LISTSCALE_5	= Print with 75% scale
 PRINT_LISTSCALE_6	= Print with 100% scale
 PRINT_BUTTON		= Print
 PRINT_TOOLTIP		= Print the plotting
+PRINT_SCALE			= Scale
 PRINT_IMAGE_PATH	= icons/printer.png
+PRINTER_SELECT		= Select a printer
+PRINT_PREVIEW		= Print preview
 
 # SDA Navigator
