SDA - Plot printing: *creation of plot image with the printer correct resolution *orientation of layout works for the preview *createImage put in a thread in order to have a cursor with busy indicator *TODO: Legend resizing and orientation of layout for the printer image not yet working

--- a/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
@@ -17,24 +17,27 @@
 ###############################################################################
 
 # Plotting controls
-SAVE_BUTTON			= Save as...
-SAVE_TOOLTIP		= Export / save the plotting
-SAVE_IMAGE_PATH		= icons/picture_save.png
-COPY_BUTTON			= Copy
-COPY_TOOLTIP		= Copy to clip board
-COPY_IMAGE_PATH		= icons/copy_edit_on.gif
-PRINT_LISTSCALE_0	= Print with 10% scale
-PRINT_LISTSCALE_1	= Print with 25% scale
-PRINT_LISTSCALE_2	= Print with 33% scale
-PRINT_LISTSCALE_3	= Print with 50% scale
-PRINT_LISTSCALE_4	= Print with 66% scale
-PRINT_LISTSCALE_5	= Print with 75% scale
-PRINT_LISTSCALE_6	= Print with 100% scale
-PRINT_BUTTON		= Print
-PRINT_TOOLTIP		= Print the plotting
-PRINT_SCALE			= Scale
-PRINT_IMAGE_PATH	= icons/printer.png
-PRINTER_SELECT		= Select a printer
-PRINT_PREVIEW		= Print preview
+SAVE_BUTTON				= Save as...
+SAVE_TOOLTIP			= Export / save the plotting
+SAVE_IMAGE_PATH			= icons/picture_save.png
+COPY_BUTTON				= Copy
+COPY_TOOLTIP			= Copy to clip board
+COPY_IMAGE_PATH			= icons/copy_edit_on.gif
+PRINT_LISTSCALE_0		= Print with 10% scale
+PRINT_LISTSCALE_1		= Print with 25% scale
+PRINT_LISTSCALE_2		= Print with 33% scale
+PRINT_LISTSCALE_3		= Print with 50% scale
+PRINT_LISTSCALE_4		= Print with 66% scale
+PRINT_LISTSCALE_5		= Print with 75% scale
+PRINT_LISTSCALE_6		= Print with 100% scale
+PRINT_BUTTON			= Print
+PRINT_TOOLTIP			= Print the plotting
+PRINT_SCALE				= Scale
+PRINT_IMAGE_PATH		= icons/printer.png
+PRINTER_SELECT			= Select a printer
+PRINT_PREVIEW			= Print preview
+ORIENTATION_TEXT		= Orientation
+PORTRAIT_ORIENTATION	= Portrait
+LANDSCAPE_ORIENTATION	= Landscape
 
 # SDA Navigator
