SDA - plot printing: display of the default printer in the preview window

--- a/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
@@ -39,5 +39,6 @@ PRINT_PREVIEW			= Print preview
 ORIENTATION_TEXT		= Orientation
 PORTRAIT_ORIENTATION	= Portrait
 LANDSCAPE_ORIENTATION	= Landscape
+DEFAULT_PRINTER			= Default Printer
 
 # SDA Navigator
