SDA - plot printing: ratio of plot/image is kept as it is displayed in the plot view, resolution button added to enable extra or lower resolution, preview remembers the last printer, scale and resolution ratio chosen. TODO: print to pdf broken

--- a/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
@@ -32,13 +32,14 @@ PRINT_LISTSCALE_5		= Print with 75% scale
 PRINT_LISTSCALE_6		= Print with 100% scale
 PRINT_BUTTON			= Print
 PRINT_TOOLTIP			= Print the plotting
-PRINT_SCALE				= Scale
+PRINT_SCALE				= Scaling
 PRINT_IMAGE_PATH		= icons/printer.png
 PRINTER_SELECT			= Select a printer
 PRINT_PREVIEW			= Print preview
 ORIENTATION_TEXT		= Orientation
 PORTRAIT_ORIENTATION	= Portrait
 LANDSCAPE_ORIENTATION	= Landscape
-DEFAULT_PRINTER			= Default Printer
+RESOLUTION_TEXT			= Resolution Multiplier
+DEFAULT_PRINTER			= Current Printer
 
 # SDA Navigator
