Added basic version of view which navigates disk systems in a lazy way.

--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -14,6 +14,13 @@
             icon="icons/nav.png"
             id="uk.ac.diamond.sda.navigator.view"
             name="SDA Navigator"/>
+      <view
+            class="uk.ac.diamond.sda.navigator.views.FileView"
+            icon="icons/folder.png"
+            id="uk.ac.diamond.sda.navigator.views.FileView"
+            name="File Navigator"
+            restorable="true">
+      </view>
    </extension>
    <!-- Declare the viewer configuration, and the default content/action bindings -->
    <extension
