Added ability to open files and directories to FileView. Also can now click and drag files/folders from this part to real projects.

--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -10,11 +10,13 @@
             name="Custom Navigator"/>
       <view
             allowMultiple="false"
+            category="uk.ac.diamond.scisoft.analysis.rcp"
             class="org.eclipse.ui.navigator.CommonNavigator"
             icon="icons/nav.png"
             id="uk.ac.diamond.sda.navigator.view"
             name="SDA Navigator"/>
       <view
+            category="uk.ac.diamond.scisoft.analysis.rcp"
             class="uk.ac.diamond.sda.navigator.views.FileView"
             icon="icons/folder.png"
             id="uk.ac.diamond.sda.navigator.views.FileView"
