--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -347,6 +347,18 @@
          </description>
       </decorator>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:uk.ac.diamond.sda.navigator.views.FileView">
+         <command
+               commandId="uk.ac.diamond.scisoft.analysis.rcp.contributions.openImageGridView"
+               label="Open in Image Grid"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
    <!-- Bind the Action Provider independently 
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">         
