--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -353,11 +353,28 @@
             allPopups="false"
             locationURI="popup:uk.ac.diamond.sda.navigator.views.FileView">
          <command
+               commandId="uk.ac.diamond.sda.navigator.openCommand"
+               label="Open"
+               style="push">
+         </command>
+         <separator
+               name="uk.ac.diamond.sda.navigator.separator1"
+               visible="true">
+         </separator>
+         <command
                commandId="uk.ac.diamond.scisoft.analysis.rcp.contributions.openImageGridView"
                label="Open in Image Grid"
                style="push">
          </command>
       </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="uk.ac.diamond.sda.navigator.views.OpenHandler"
+            id="uk.ac.diamond.sda.navigator.openCommand"
+            name="Open">
+      </command>
    </extension>
    <!-- Bind the Action Provider independently 
    <extension
