Added collapse all to FileView.
Change-Id: I74c35fb564b36efe61e8fcb2f2ba98d0929b56ae

--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -366,6 +366,30 @@
                label="Open in Image Grid"
                style="push">
          </command>
+         <separator
+               name="uk.ac.diamond.sda.navigator.separator2"
+               visible="true">
+         </separator>
+         <command
+               commandId="uk.ac.diamond.sda.navigator.collapseAll"
+               icon="icons/CollapseAll.png"
+               label="Collapse All"
+               style="push">
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:uk.ac.diamond.sda.navigator.views.FileView">
+         <separator
+               name="uk.ac.diamond.sda.navigator.separator3"
+               visible="true">
+         </separator>
+         <command
+               commandId="uk.ac.diamond.sda.navigator.collapseAll"
+               icon="icons/CollapseAll.png"
+               label="Collapse All"
+               style="push">
+         </command>
       </menuContribution>
    </extension>
    <extension
@@ -374,6 +398,11 @@
             defaultHandler="uk.ac.diamond.sda.navigator.views.OpenHandler"
             id="uk.ac.diamond.sda.navigator.openCommand"
             name="Open">
+      </command>
+      <command
+            defaultHandler="uk.ac.diamond.sda.navigator.views.CollapseAllHandler"
+            id="uk.ac.diamond.sda.navigator.collapseAll"
+            name="Collapse All">
       </command>
    </extension>
    <!-- Bind the Action Provider independently 
