--- a/uk.ac.diamond.scisoft.analysis.rcp.contributions/build.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp.contributions/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                fragment.xml,\
-               icons/
+               icons/,\
+               cheat/
 javacSource = 1.6
 javacTarget = 1.6
 javacProjectSettings=true
