--- a/uk.ac.diamond.scisoft.deprecated.rcp/build.properties
+++ b/uk.ac.diamond.scisoft.deprecated.rcp/build.properties
@@ -3,7 +3,8 @@ source.. = src/,\
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               icons/
 javacDefaultEncoding.. = UTF-8
 javacSource = 1.6
 javacTarget = 1.6
