--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -430,6 +430,41 @@
             name="Refresh">
       </command>
    </extension>
+   <extension
+         point="org.eclipse.ui.cheatsheets.cheatSheetContent">
+      <category
+            id="uk.ac.diamond.sda.navigator.basic.data.viewing.category"
+            name="Basic Data Viewing">
+      </category>
+      <cheatsheet
+            category="uk.ac.diamond.sda.navigator.basic.data.viewing.category"
+            composite="false"
+            contentFile="cheatsheets/DATFileExplorer.xml"
+            id="uk.ac.diamond.sda.navigator.dat.file.browsing.cheatsheet"
+            name="DAT files browsing in Package Explorer">
+      </cheatsheet>
+      <cheatsheet
+            category="uk.ac.diamond.sda.navigator.basic.data.viewing.category"
+            composite="false"
+            contentFile="cheatsheets/NewProjectCreator.xml"
+            id="uk.ac.diamond.sda.navigator.data.project.creator.cheatsheet"
+            name="Data Project creation">
+      </cheatsheet>
+      <cheatsheet
+            category="uk.ac.diamond.sda.navigator.basic.data.viewing.category"
+            composite="true"
+            contentFile="cheatsheets/DATNXSFileExplorer.xml"
+            id="uk.ac.diamond.sda.navigator.dat.nxs.file.explorer.cheatsheet"
+            name="DAT and NXS file explorer">
+      </cheatsheet>
+      <cheatsheet
+            category="uk.ac.diamond.sda.navigator.basic.data.viewing.category"
+            composite="false"
+            contentFile="cheatsheets/NexusFileExplorer.xml"
+            id="uk.ac.diamond.sda.navigator.nexus.file.browsing.cheatsheet"
+            name="Nexus files browsing in Package Explorer">
+      </cheatsheet>
+   </extension>
    <!-- Bind the Action Provider independently 
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">         
