--- a/uk.ac.diamond.sda.navigator/build.properties
+++ b/uk.ac.diamond.sda.navigator/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
-               icons/
+               icons/,\
+               cheatsheets/
 src.includes = about.html
 javacDefaultEncoding.. = UTF-8
 javacSource = 1.6
