--- a/uk.ac.diamond.scisoft.analysis.polling/build.properties
+++ b/uk.ac.diamond.scisoft.analysis.polling/build.properties
@@ -2,7 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               cheat/
 javacDefaultEncoding.. = UTF-8
 javacSource = 1.6
 javacTarget = 1.6
