--- a/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
+++ b/uk.ac.diamond.scisoft.analysis.rcp/src/sda_resource.properties
@@ -32,14 +32,14 @@ PRINT_LISTSCALE_5		= Print with 75% scale
 PRINT_LISTSCALE_6		= Print with 100% scale
 PRINT_BUTTON			= Print
 PRINT_TOOLTIP			= Print the plotting
-PRINT_SCALE				= Scaling
+PRINT_SCALE				= Scale
 PRINT_IMAGE_PATH		= icons/printer.png
 PRINTER_SELECT			= Select a printer
 PRINT_PREVIEW			= Print preview
 ORIENTATION_TEXT		= Orientation
 PORTRAIT_ORIENTATION	= Portrait
 LANDSCAPE_ORIENTATION	= Landscape
-RESOLUTION_TEXT			= Resolution Multiplier
-DEFAULT_PRINTER			= Current Printer
+RESOLUTION_TEXT			= Resolution
+DEFAULT_PRINTER			= Printer
 
 # SDA Navigator
