--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -295,14 +295,14 @@
             adaptable="true"
             class="uk.ac.diamond.sda.navigator.decorator.LightweightMetadataDecorator"
             id="uk.ac.diamond.sda.navigator.metaData"
-            label="File Meta Data"
+            label="File Meta Data Decorator"
             lightweight="true"
             state="true">
             <enablement>
                <objectClass name="org.eclipse.core.resources.IResource"/>
             </enablement>
             <description>
-               Displays the file size and the date of last modification.
+               Displays the size and the date of last modificationof a resource file.
             </description>
       </decorator>
       <!-- Not correctly working yet -->
@@ -326,21 +326,21 @@
             adaptable="true"
             class="uk.ac.diamond.sda.navigator.hdf5.HDF5LabelProvider"
             id="uk.ac.diamond.sda.navigator.hdf5Decorator"
-            label="HDF5 element"
+            label="HDF5 tree element Decorator"
             state="true">
          <enablement>
             <objectClass
                   name="uk.ac.diamond.scisoft.analysis.rcp.navigator.treemodel.TreeNode">
             </objectClass></enablement>
          <description>
-            Displays the HDF5 tree elements caracteristics.
+            Displays the HDF5 tree elements data as decorator.
          </description>
       </decorator>
       <decorator
             adaptable="true"
-            class="uk.ac.diamond.sda.navigator.decorator.LightweightScanCommandDecorator"
-            id="uk.ac.diamond.sda.navigator.scanCmdFileDecorator"
-            label="SRS/Nexus Scan Command and Title Decorator"
+            class="uk.ac.diamond.sda.navigator.decorator.LightweightNXSScanCmdDecorator"
+            id="uk.ac.diamond.sda.navigator.nxsScancmdDecorator"
+            label="Nexus Scan Command and Title Decorator"
             lightweight="true"
             state="true">
          <enablement>
@@ -349,7 +349,22 @@
             </objectClass>
          </enablement>
          <description>
-            Displays the Scan Command of a .dat file and the Title and Scan Command of a Nexus file (if there are any).
+            Displays the Title and Scan Command of a Nexus file as a decorator (if there are any).
+         </description>
+      </decorator>
+      <decorator
+            adaptable="true"
+            class="uk.ac.diamond.sda.navigator.decorator.LightweightSRSScanCmdDecorator"
+            id="uk.ac.diamond.sda.navigator.srsScancmdDecorator"
+            label="DAT file Scan Command Decorator"
+            lightweight="true"
+            state="true">
+         <enablement>
+            <objectClass
+                  name="org.eclipse.core.resources.IResource">
+            </objectClass></enablement>
+         <description>
+            Displays the Scan Command of a .dat file as a decorator (if there are any).
          </description>
       </decorator>
    </extension>
