--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -22,11 +22,13 @@
          point="uk.ac.diamond.sda.meta.metadataPageRegister">
       <client
             class="uk.ac.diamond.sda.meta.page.DiffractionMetadataPage"
+            icon="icons/DiffractionIcon.png"
             name="Diffraction Metadata"
             supportedMetadata="uk.ac.diamond.scisoft.analysis.io.IDiffractionMetadata">
       </client>
       <client
             class="uk.ac.diamond.sda.meta.page.HeaderTablePage"
+            icon="icons/header_table.gif"
             name="Header"
             supportedMetadata="uk.ac.diamond.scisoft.analysis.io.IMetaData">
       </client>
