--- a/uk.ac.diamond.scisoft/plugin.xml
+++ b/uk.ac.diamond.scisoft/plugin.xml
@@ -30,4 +30,10 @@
             name="Feedback">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="uk.ac.diamond.scisoft.JythonCreator">
+      </startup>
+   </extension>
 </plugin>
