SCISOFT-UI *Plotting : new menu in the plot menu of the image plotting view to set on/off display of X-Y-axis *IDs fields added to decorators

--- a/uk.ac.diamond.sda.navigator/plugin.xml
+++ b/uk.ac.diamond.sda.navigator/plugin.xml
@@ -318,7 +318,7 @@
             </objectClass>
          </enablement>
          <description>
-            Displays the file owner of a resource file.
+            Displays the file owner of a resource file. (Unix only)
          </description>
       </decorator>
       <!-- Not correctly working yet -->
