METADATA - addition of code to prevent automatic loading of all possible pages.
 * added discriminator classes to distinguish different types of
metatdata.
 * Created page register from extension points in pagebookview

Change-Id: Ie62d1efcc5a70381e8f70dce79caa91fa9d81144

--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -24,13 +24,13 @@
             class="uk.ac.diamond.sda.meta.page.DiffractionMetadataPage"
             icon="icons/DiffractionIcon.png"
             name="Diffraction Metadata"
-            supportedMetadata="uk.ac.diamond.scisoft.analysis.io.IDiffractionMetadata">
+            supportedMetadata="uk.ac.diamond.sda.meta.discriminator.DiffractionMetadataDiscriminator">
       </client>
       <client
             class="uk.ac.diamond.sda.meta.page.HeaderTablePage"
             icon="icons/header_table.gif"
             name="Header"
-            supportedMetadata="uk.ac.diamond.scisoft.analysis.io.IMetaData">
+            supportedMetadata="uk.ac.diamond.sda.meta.discriminator.MetadataDiscriminator">
       </client>
    </extension>
 
