METADATA - changes to code to remove page book view. Was causing too many problems.
 * changed pages to extend nothing
 * added method to interface to return composite of GUI elements.
 * modified xml and extension point.

Change-Id: I275335305e2d9088eb0d39e39a9562a525536dbd

--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -11,9 +11,9 @@
       </category>
       <view
             category="uk.ac.diamond.sda.meta.category"
-            class="uk.ac.diamond.sda.meta.views.MetadataPageBookView"
+            class="uk.ac.diamond.sda.meta.views.MetadataPageView"
             icon="icons/DiffractionIcon.png"
-            id="uk.ac.diamond.sda.meta.MetadataPageBookView"
+            id="uk.ac.diamond.sda.meta.MetadataPageView"
             name="Metadata View"
             restorable="true">
       </view>
