--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -21,7 +21,7 @@
    <extension
          point="uk.ac.diamond.sda.meta.metadataPageRegister">
       <client
-            class="uk.ac.diamond.sda.meta.page.DiffractionMetadataPage"
+            class="uk.ac.diamond.sda.meta.page.DiffractionMetadataComposite"
             icon="icons/DiffractionIcon.png"
             name="Diffraction Metadata"
             supportedMetadata="uk.ac.diamond.sda.meta.discriminator.DiffractionMetadataDiscriminator">
