METADATA VIEW - adding code for preference page
Change-Id: Iad1dbc53f2357032311c4ac90d0fbec2a1b62538

--- a/uk.ac.diamond.sda.meta/plugin.xml
+++ b/uk.ac.diamond.sda.meta/plugin.xml
@@ -33,5 +33,13 @@
             supportedMetadata="uk.ac.diamond.sda.meta.discriminator.MetadataDiscriminator">
       </client>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="preferences.MetadataPageAssociationPreferences"
+            id="uk.ac.diamond.sda.meta.metadataPageAssociationPreferences"
+            name="Metadata Page Association Preferences">
+      </page>
+   </extension>
 
 </plugin>
