--- a/uk.ac.diamond.sda.meta.extended/.gitignore
+++ b/uk.ac.diamond.sda.meta.extended/.gitignore
@@ -1,5 +1,12 @@
-# Ignores that are common to all Eclipse feature projects
+# Ignores that are common to all Eclipse GDA plugin projects
+/@dot
+/@dot.log
+/bin
 /build.xml
-/feature.temp.folder
+/javaCompiler...args
+/src/corba/
+/temp.folder
+/test-reports
+/test-scratch
 
 # Ignores that are specific to this Eclipse project
